--- a/library.properties
+++ b/library.properties
@@ -2,10 +2,10 @@ name=SPL06-001
 version=0.1.0
 author=happy12
 maintainer=happy12
-sentence=SPL06-001 library for Arduino processors
-paragraph=Supports SPL06-001 I2C pressure sensor.
+sentence=Arduino library for SPL06-001 sensor
+paragraph=Arduino library to support SPL06-001 pressure sensor.
 category=Sensors
 url=https://github.com/happy12/SPL06-001
 architectures=*
 includes=SPL06-001.h
-
+depends=Adafruit Unified Sensor, Adafruit BusIO
